[project]
name = "neuralfeels-mujoco"
version = "0.1.0"
description = "Visuotactile perception for dexterous manipulation using neural fields in MuJoCo"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "William Obino", email = "obinowilliam@staka.cc"}
]

dependencies = [
    # Core robotics
    "mujoco>=3.1.0",
    "gymnasium>=0.29.0",
    "numpy>=1.24.0",
    "pybullet>=3.2.0",
    
    # Computer vision
    "opencv-python>=4.8.0",
    "scikit-image>=0.21.0",
    "imageio[ffmpeg]>=2.31.0",
    
    # Visualization
    "open3d>=0.18.0",
    "matplotlib>=3.6.0",
    
    # Optimization & neural fields
    "theseus-ai>=0.2.0",
    "scipy>=1.10.0",
    
    # Configuration & tracking
    "hydra-core>=1.3.2",
    "omegaconf>=2.3.0",
    "wandb>=0.15.0",
    
    # Development
    "black>=23.0.0",
    "ruff>=0.1.0",
    "pytest>=7.0.0",
    "pre-commit>=3.0.0",
]

[project.optional-dependencies]
# Intel Arc (XPU) dependencies
# NOTE: These must be installed in specific order via Makefile, not directly via uv
# See: https://intel.github.io/intel-extension-for-pytorch/index.html#installation
intel = []

# NVIDIA GPU (CUDA) dependencies
nvidia = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "torchaudio>=2.0.0",
]

# AMD GPU (ROCm) dependencies
amd = [
    "torch==2.4.1",
    "torchvision==0.19.1",
]

# Development extras
dev = [
    "ipython>=8.0.0",
    "jupyter>=1.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
neuralfeels-collect = "scripts.collect_data:main"
neuralfeels-train = "scripts.train:main"
neuralfeels-eval = "scripts.eval:main"
neuralfeels-demo = "scripts.demo:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["envs*", "perception*", "src*", "scripts*"]

[tool.black]
line-length = 100
target-version = ['py312']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]  # Line too long (handled by black)

[tool.ruff.isort]
known-first-party = ["envs", "perception", "src", "scripts"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --strict-markers"
